--- a/twitter-clone/package.json
+++ b/twitter-clone/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
-    "tailwind-merge": "^2.1.0"
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.1.0",
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
